--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-h1 {
+title {
     text-align: center;
     color: salmon;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
