--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,100 @@
+* {
+    box-sizing: border-box;
+}
+
+#app-content
+{
+    flex : 4;
+}
+
+
+body, html, #root    {
+    margin : 0;
+    padding: 0;
+    height: 100%;
+}
+
+#root {
+    display: flex;
+    flex-direction: row;
+    gap : 2rem;
+}
+
+#site-title{
+    background-color:#020101;
+    font-size: 1.5rem;
+    margin: 0 -0.5rem;
+    padding: 1rem 0.5rem 1rem 0.5rem;
+}
+
 title {
     text-align: center;
     color: salmon;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.nav 
+{
+    background-color:#2d2727;
+    color : whitesmoke;
+    display: inline-block;
+    padding: 0 0.5rem;
+    flex: 1;
+    position: relative;
+}
+
+.nav ul {
+ padding : 0;
+ margin : 0;
+ list-style: none;
+}
+
+.nav li {
+    padding: 1rem;
+}
+
+.nav li.active {
+    background-color: #555;
+}
+
+.nav li:hover {
+    background-color: #777;
+}
+
+.nav a{
+ color : inherit;
+ text-decoration: none;
+ display: flex;
+ align-items: center;
+ padding: .25rem ;
+}
+
+.dropdown
+{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.dropdown-content 
+{
+    display: none;
+    position:relative;
+    top: 1rem;
+    right: -1rem;
+    color: whitesmoke;
+    background-color: #2d2727;
+}
+
+.dropdown:hover .dropdown-content 
+{
+    display: block;
+}   
+
+#navbar-bottom-button
+{
+    position: absolute;
+    bottom: 1rem;
+    text-align: center;
+    width: 100%;
 }
